--- a/index.html
+++ b/index.html
@@ -4,26 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lato:100,300,400,700" />
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lato:100,300,400,700,900" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <title>Story Block Test</title>
   </head>
   <body>
     <div class="wrapper" style="width: 100%;">
       <header>
-        <div class="container">
+        <div class="headerWrapper">
           <div class="logoContainer">
-            <div class="logo">
-              <div class="backBox">
-
-              </div>
-              <div class="frontBox">
-                <div>M</div>
-              </div>
-            </div>
-            <div class="logoName">
-              Minimal
-            </div>
+            <img src="./images/LOGO.svg" alt="">
           </div>
           <menu>
             <ul>
@@ -36,31 +26,33 @@
         </div>
       </header>
       <section class="intro">
-        <div class="container">
-          <div class="headingBox">
-            <div class="introHeading">
+        <div class="introWrapper">
+          <div class="introHeader">
+            <div class="heading">
               Welcome to Minimal
             </div>
-            <div class="introSubheading">
+            <div class="subheading">
               We're glad you're here.
             </div>
           </div>
           <div class="carouselContainer">
-            <div class="leftArrow">
+            <div class="leftArrow" id="prev">
               <img src="./images/prev.png" alt="Prev">
             </div>
             <div class="carouselItems">
-              <div class="leftBox">
-                <img src="./images/left.svg" alt="Cone">
-              </div>
-              <div class="middleBox">
-                <img src="./images/middle.svg" alt="Heart">
-              </div>
-              <div class="rightBox">
-                <img src="./images/right.svg" alt="Pie">
-              </div>
+              <ul>
+                <li>
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="-5 -5 170 170"><defs><style>.c{fill:none; stroke:#fff;stroke-miterlimit:10;stroke-width:5px;}.d{fill:none; stroke:#fff;stroke-miterlimit:10;stroke-width:3px;}</style></defs><g transform="translate(0)"><path class="c" d="M591.6,80.1A80,80,0,1,1,511.64.1,80.011,80.011,0,0,1,591.6,80.1Z" transform="translate(-431.6 -0.1)"/><path class="d" d="M540.221,64.9a18.571,18.571,0,0,0-17.727,13.092,10.98,10.98,0,0,0-1.3-2.358A18.5,18.5,0,0,0,485.9,83.441a16.835,16.835,0,0,0,.813,5.367c2.114,12.279,23.664,28.868,36.35,42.042l.081-.081c13.58-16.67,33.666-30.088,34.886-42.042a18.9,18.9,0,0,0,.813-5.286A18.655,18.655,0,0,0,540.221,64.9Z" transform="translate(-443.043 -13.643)"/></g></svg>
+                </li>
+                <li>
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 113 112.999"><defs><style>.a{fill:none;stroke:#fff;stroke-miterlimit:10;stroke-width:3px;}.b{fill:#fff;}</style></defs><g transform="translate(1.5 1.5)"><path class="a" d="M110.2,55.1A55,55,0,1,1,55.172.1,55.019,55.019,0,0,1,110.2,55.1Z" transform="translate(-0.2 -0.1)"/><g transform="translate(23.07 32.503)"><path class="b" d="M70.085,100.061h0a12.171,12.171,0,0,1-3.678-.595,12.045,12.045,0,0,1-8.167-13.629L52.4,83.944V73.452L99.94,58.2V99.249L80.9,93.138A11.944,11.944,0,0,1,70.085,100.061ZM54.077,82.754,60.242,84.7l-.216.757A10.433,10.433,0,0,0,66.949,97.9a10.62,10.62,0,0,0,3.191.487h0a10.385,10.385,0,0,0,9.627-6.6l.27-.7,18.334,5.9V60.417L54.077,74.641ZM70.031,96.275a7.762,7.762,0,0,1-2.488-.433,7.894,7.894,0,0,1-5.084-9.519l.216-.811,15.035,4.813-.325.811A7.884,7.884,0,0,1,70.031,96.275Zm-6.166-8.653a6.2,6.2,0,0,0,11.628,3.732Z" transform="translate(-46.289 -58.2)"/><path class="b" d="M41.1,97.015V84.9h.811a6.058,6.058,0,0,1,0,12.115Zm1.623-10.384v8.653a4.42,4.42,0,0,0,0-8.653Z" transform="translate(-41.1 -70.46)"/></g></g></svg>
+                </li>
+                <li>
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 113 113.003"><defs><style>.a{fill:none;stroke:#fff;stroke-miterlimit:10;stroke-width:3px;}.b{fill:#fff;}</style></defs><g transform="translate(1.5 1.5)"><path class="a" d="M972.9,55.1a55,55,0,1,1-55-55A55.006,55.006,0,0,1,972.9,55.1Z" transform="translate(-862.9 -0.1)"/><g transform="translate(23.726 22.533)"><path class="b" d="M951.635,117.373a30.636,30.636,0,0,1,0-61.273A29.063,29.063,0,0,1,961.8,57.9l1.009.36-9.515,27.392h28.978v1.081A30.656,30.656,0,0,1,951.635,117.373Zm0-59.11a28.4,28.4,0,1,0,28.4,29.483h-29.77l9.8-28.113A27.914,27.914,0,0,0,951.635,58.263Z" transform="translate(-921 -54.37)"/><path class="b" d="M970,82.823,980.092,53.7l1.009.36a29.4,29.4,0,0,1,19.679,27.681v1.081Zm11.461-26.311L973.1,80.66h25.518a26.872,26.872,0,0,0-17.156-24.149Z" transform="translate(-934.679 -53.7)"/></g></g></svg>
+                </li>
+              </ul>
             </div>
-            <div class="rightArrow">
+            <div class="rightArrow" id="next">
               <img src="./images/next.png" alt="Next">
             </div>
           </div>
@@ -71,62 +63,59 @@
         </div>
       </section>
       <section class="services">
-        <div class="headingBox">
-          <div class="serviceHeading">
+        <div class="servicesContainer">
+          <div class="containerHeader">
             our services
           </div>
-        </div>
-        <div class="serviceItems">
-          <div class="marketing">
-            <div>
-              <img src="./images/Cloud.svg" alt="">
+          <div class="containerItems">
+            <div class="itemOne">
+              <div class="itemHeader">
+                <img src="./images/Cloud.svg" alt="cloud">
+                <h3>Marketing</h3>
+              </div>
+              <div class="itemBody">
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+              </div>
             </div>
-            <div class="header">
-              Marketing
+            <div class="itemTwo">
+              <div class="itemHeader">
+                <img src="./images/lightbulb.svg" alt="lightbulb">
+                <h3>Creative</h3>
+              </div>
+              <div class="itemBody">
+                Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum .
+              </div>
             </div>
-            <div class="body">
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-            </div>
-          </div>
-          <div class="creative">
-            <div>
-              <img src="./images/lightbulb.svg" alt="">
-            </div>
-            <div class="header">
-              Creative
-            </div>
-            <div class="body">
-              Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum .
-            </div>
-          </div>
-          <div class="analytics">
-            <div>
-              <img src="./images/phone.svg" alt="">
-            </div>
-            <div class="header">
-              Analytics
-            </div>
-            <div class="body">
-              Iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit.
+            <div class="itemThree">
+              <div class="itemHeader">
+                <img src="./images/phone.svg" alt="phone">
+                <h3>Analytics</h3>
+              </div>
+              <div class="itemBody">
+                Iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit.
+              </div>
             </div>
           </div>
         </div>
       </section>
       <section class="products">
         <div class="shaped"></div>
-        <div class="textBox">
-          <div class="header">
+        <div class="img">
+          <img src="./images/product_images.png" alt="">
+        </div>
+        <div class="productsTextBody">
+          <h2>
             our products
-          </div>
-          <div class="subheader">
+          </h2>
+          <h3>
             built smart
-          </div>
+          </h3>
           <div class="body">
             <p>
               Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
             </p>
             <p>
-               Praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+              Praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
             </p>
           </div>
         </div>
@@ -150,10 +139,8 @@
         <div class="contactContainer">
           <div class="inTouchBox">
             <div class="inTouchHeading">
-              Get In Touch
-            </div>
-            <div class="inTouchSubheading">
-              About Us
+              <h2>Get In Touch</h2>
+              <h3>About Us</h3>
             </div>
             <article>
               <p>
@@ -165,9 +152,9 @@
             </article>
           </div>
           <div class="contactForm">
-            <div class="formSubheading">
-              Contact form
-            </div>
+            <h3>
+              Contact Form
+            </h3>
             <form>
               <div>
                 <span class="label">Name</span>
@@ -193,50 +180,36 @@
         </div>
       </section>
       <footer>
-        <div class="container">
-          <div class="first">
-            <p>
-              Praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
-            </p>
+        <div class="footerContainer">
+          <div class="leftBox">
+            <div class="left">
+              <p>Praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+              <p>Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+            </div>
+            <div class="right">
+              <p>Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+            </div>
           </div>
-          <div class="second">
-            <p>
-              Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
-            </p>
+          <div class="rightBox">
+            <div class="left">
+              <ul>
+                <li><a href="#">services</a></li>
+                <li><a href="#">products</a></li>
+                <li><a href="#">subscribe</a></li>
+                <li><a href="#">contact</a></li>
+              </ul>
+            </div>
+            <div class="right">
+              <ul>
+                <li><a href="#"><i class="fab fa-facebook-square"></i> facebook</a></li>
+                <li><a href="#"><i class="fab fa-instagram"></i> instagram</a></li>
+                <li><a href="#"><i class="fab fa-twitter-square"></i> twitter</a></li>
+              </ul>
+            </div>
           </div>
-          <div class="third">
-            <ul>
-              <li><a href="#">Services</a></li>
-              <li><a href="#">Products</a></li>
-              <li><a href="#">Subscribe</a></li>
-              <li><a href="#">Contact</a></li>
-            </ul>
+          <div class="bottom">
+            &copy;2018 Minimal
           </div>
-          <div class="fourth">
-            <ul>
-              <li>
-                <a href="#">
-                  <i class="fab fa-facebook-square"></i> facebook
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <i class="fab fa-instagram"></i> instagram
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <i class="fab fa-twitter-square"></i> twitter
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="bottom">
-          &copy;2018 Minimal
         </div>
       </footer>
     </div>
