--- a/index.html
+++ b/index.html
@@ -17,12 +17,26 @@
           </div>
           <menu>
             <ul>
-              <li><a href="#">Services</a></li>
-              <li><a href="#">Products</a></li>
-              <li><a href="#">Subscribe</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="#services" class="slide-selector">Services</a></li>
+              <li><a href="#products" class="slide-selector">Products</a></li>
+              <li><a href="#subscribe" class="slide-selector">Subscribe</a></li>
+              <li><a href="#contact" class="slide-selector">Contact</a></li>
             </ul>
           </menu>
+          <div class="smallMenu" id="toggle">
+            <i class="fas fa-bars"></i>
+          </div>
+          <div class="side-nav" id="side-menu">
+            <div class="sideNavItems">
+              <div class="btn-close"><i class="far fa-times-circle"></i></div>
+              <ul>
+                <li id="side-menu-li" class="slide-selector"><a href="#services" class="slide-selector">Services</a></li>
+                <li id="side-menu-li"><a href="#products" class="slide-selector">Products</a></li>
+                <li id="side-menu-li"><a href="#subscribe" class="slide-selector">Subscribe</a></li>
+                <li id="side-menu-li"><a href="#contact" class="slide-selector">contact</a></li>
+              </ul>
+            </div>
+          </div>
         </div>
       </header>
       <section class="intro">
@@ -62,8 +76,8 @@
           </div>
         </div>
       </section>
-      <section class="services">
-        <div class="servicesContainer">
+      <section class="services" id="services">
+        <div class="servicesContainer fadeIn">
           <div class="containerHeader">
             our services
           </div>
@@ -88,7 +102,7 @@
             </div>
             <div class="itemThree">
               <div class="itemHeader">
-                <img src="./images/phone.svg" alt="phone">
+                <img src="./images/Phone.svg" alt="phone">
                 <h3>Analytics</h3>
               </div>
               <div class="itemBody">
@@ -98,12 +112,12 @@
           </div>
         </div>
       </section>
-      <section class="products">
+      <section class="products" id="products">
         <div class="shaped"></div>
-        <div class="img">
+        <div class="img fadeIn">
           <img src="./images/product_images.png" alt="">
         </div>
-        <div class="productsTextBody">
+        <div class="productsTextBody fadeIn">
           <h2>
             our products
           </h2>
@@ -120,8 +134,8 @@
           </div>
         </div>
       </section>
-      <section class="subscribe">
-        <div class="container">
+      <section class="subscribe" id="subscribe">
+        <div class="container fadeIn">
           <div class="subscribeHeading">
             Subscribe
           </div>
@@ -135,7 +149,7 @@
         </div>
         <div class="shaped"></div>
       </section>
-      <section class="contact">
+      <section class="contact fadeIn" id="contact">
         <div class="contactContainer">
           <div class="inTouchBox">
             <div class="inTouchHeading">
@@ -193,10 +207,10 @@
           <div class="rightBox">
             <div class="left">
               <ul>
-                <li><a href="#">services</a></li>
-                <li><a href="#">products</a></li>
-                <li><a href="#">subscribe</a></li>
-                <li><a href="#">contact</a></li>
+                <li><a href="#services" class="slide-selector">Services</a></li>
+                <li><a href="#products" class="slide-selector">Products</a></li>
+                <li><a href="#subscribe" class="slide-selector">Subscribe</a></li>
+                <li><a href="#contact" class="slide-selector">Contact</a></li>
               </ul>
             </div>
             <div class="right">
